--- a/src/routes/book/BookComponent.css
+++ b/src/routes/book/BookComponent.css
@@ -22,6 +22,17 @@
     box-shadow: 0 0.55rem 0.3rem rgba(0, 0, 0, 0.1);
     align-items: center;
 }
+.card{
+    border : 2px solid var(--secundary-color);
+    width: 13rem;
+    height: 22rem;
+    
+    border-radius: 1.2rem;
+    padding: 1rem;
+    background-color: var(--card-background);
+    box-shadow: 0 0.55rem 0.3rem rgba(0, 0, 0, 0.1);
+    align-items: center;
+}
 .imageText{
     height: 1.5rem;
     display: flex;
