--- a/src/components/book/BookComponent.css
+++ b/src/components/book/BookComponent.css
@@ -1,7 +1,7 @@
-.card {
-    display:flex;
-    width: 20rem;
-    height: 10rem;
+.card{
+    border : 2px solid var(--secundary-color);
+    width: 18rem;
+    height: 33rem;
     
     border-radius: 1.2rem;
     padding: 1rem;
@@ -9,36 +9,30 @@
     box-shadow: 0 0.55rem 0.3rem rgba(0, 0, 0, 0.1);
     align-items: center;
 }
-.content{
-    display: block;
+
+.author{
+    font-size:0.9rem;
 }
 
 .img{
-    height: 10rem;
-    width: 6rem;
-    margin-right: 1rem;
+    height: 18rem;
+    width: 12rem;
 }
 
-.author{
-    font-size: 0.9rem;
-}
-
-.icon-select{
-  display: flex;
-  justify-content: center;
-  transition: transform 0.2s ease;
-  background-color: transparent;
+.title{
+    font-size: 2em;
 }
 
 .card-header{
-    width: 14rem;
     display: flex;
     height: 2rem;
     justify-content: space-between;
     align-items: center;
     font-size: 0.75rem;
     margin: 0;
-}
+    margin-top: 1rem;
+    margin-bottom:0.5rem
+  }
 
 .comments{
     margin: 0;
@@ -51,14 +45,15 @@
     grid-template-columns: auto auto;
 }
 .comment{
-    font-size: 0.8rem;
+    font-size: 1rem;
     height: 1.8rem;
     display: flex;
     justify-content: left;
-    margin-top: 0.15rem;
+    margin-top: 0.3rem;
 }
 
 .image-center{
     display: flex;
     justify-content: center;
+    margin-bottom: 1rem;
 }
