--- a/src/components/book/BookComponent.css
+++ b/src/components/book/BookComponent.css
@@ -1,7 +1,7 @@
 .card{
     border : 2px solid var(--secundary-color);
     width: 18rem;
-    height: 33rem;
+    /* height: 35rem; */
     
     border-radius: 1.2rem;
     padding: 1rem;
@@ -38,7 +38,8 @@
     margin: 0;
     padding: 0;
     width: 100%;
-
+    height: 100%;
+    gap:10px;
     display: grid;
     justify-content: center;
     align-items: center;
