--- a/src/components/book/BookComponent.css
+++ b/src/components/book/BookComponent.css
@@ -8,6 +8,7 @@
     background-color: var(--card-background);
     box-shadow: 0 0.55rem 0.3rem rgba(0, 0, 0, 0.1);
     align-items: center;
+    background-color: #fde7c1;
 }
 
 .author{
